src/sheet/_sheet.css
@import './_sheet-variables.css';
@import './_sheet-scrollbar.css';
@import './_sheet-dialogs.css';
@import './_sheet-linter.css';
@import './_formula-bar.css';
@import './_cell-ranges.css';

/* HACK: */
.sc-button {
  white-space: nowrap;
}

/* ToolPane */
.sc-sheet-editor .se-tool-pane {
  display: flex;
  z-index: 3;
}

.sc-sheet-editor .se-tool-pane .sc-formula-bar {
  flex: 1 1 0;
}

.sc-sheet-editor .se-tool-pane .sc-toolbar {
  flex: 0 1 0;
}

.sc-sheet-editor {
  height: 100%;
  display: flex;
  flex-direction: row;
  height: 100%;
}

.sc-sheet-editor > .se-main-section {
  flex: 1 1 600px;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.sc-sheet-editor > .se-main-section > .se-body {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.sc-sheet-editor > .se-main-section > .sc-sheet {
  flex: 1;
}

.sc-sheet-editor > .se-main-section > .se-status-bar {
  width: 100%;
  height: var(--sheet-header-height);
}

.sc-sheet {
  position: relative;
  background: #fff;
  width: 100%;
  height: 100%;
  overflow: hidden;
  cursor: default;
  font-size: var(--small-font-size);
}

.sc-sheet .sm-hidden {
  display: none;
}

.sc-sheet .se-keytrap {
  opacity: 0;
}

.sc-sheet .se-corner {
  background: #d2d2d2;
  border-right: 2px solid #aaa;
  border-bottom: 2px solid #aaa;
}

.sc-sheet .se-corner > .se-column-label {
  visibility: hidden;
}

.sc-sheet > .se-content {
  position: absolute;
  top: 0px;
  left: 0px;
  overflow: hidden;
}

.sc-sheet table {
  position: relative;
  border-collapse: collapse;
  table-layout: fixed;
}

.sc-sheet table > .se-head {
  height: var(--sheet-header-height);
}

.sc-sheet th {
  background: var(--sheet-header-background);
  border: 1px solid var(--sheet-header-bordercolor);
}

.sc-sheet tr th:first-child {
  width: var(--sheet-header-width);
  vertical-align: middle;
}

.sc-sheet .sc-column-header .se-column-title {
  display: flex;
  align-items: center;
  font-size: 12px;
}

.sc-sheet .sc-column-header .se-column-title > * {
  flex-grow: 1;
  justify-content: space-around;
  margin: 0px 5px;
}

.sc-sheet .sc-column-header .se-column-title .se-column-name {
  flex-grow: 3;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: #b8b8b8;
  margin: 0px 2px;
}

.sc-sheet .sc-column-header .se-column-title .se-column-label {
  color: #616161;
}

.sc-sheet .sc-column-header .se-column-title .se-column-type {
  position: relative;
  color: #616161;
  font-size: 10px;
  line-height: 10px;
}

.sc-sheet .sc-column-header .se-resize-handle {
  position: absolute;
  height: 100%;
  width: 3px;
  top: 0px;
  right: 0px;
}

.sc-sheet .sc-column-header .se-resize-handle:hover {
  background: rgba(255, 0, 0, 0.35);
  cursor: ew-resize;
}

.sc-sheet td {
  white-space: pre-wrap;
  overflow-wrap: break-word;
  border: 1px solid var(--sheet-cell-bordercolor);
  position: relative;
  padding: 2px 5px;
}

/*
  Note: the overlay is implemented as a container with
  zero extent and no pointer events so that mouse events
  can go through to the underlying cells by default.
  Only elements with real dimensions such as buttons consume
  the events.
*/
.sc-sheet > .se-unclickable-overlays {
  height: 0px;
  overflow:visible;
  pointer-events:none;
  background:none !important;
}

.sc-sheet > .se-clickable-overlays {
  height: 0px;
  overflow:visible;
  background:none !important;
}

.se-selection-overlay > .se-selection-anchor {
  position: absolute;
  border: solid 2px #2684FC;
}

.se-selection-overlay > .se-selection-range {
  position: absolute;
  border: solid 1px #2684FC;
  background: rgba(38, 132, 252, 0.1)
}

.se-selection-overlay > .se-selection-columns,
.se-selection-overlay > .se-selection-rows {
  position: absolute;
  background: rgba(0,0,0,0.05)
}

.sc-column-header {
  position: relative;
  height: 100%;
  padding: 5px 0px;
}

.sc-column-header .se-column-type > .sc-tooltip {
  display: none;
  position: absolute;
  top: 20px;
  left: 50%;
  transform: translate(-50%);
  z-index: 10;
}

.sc-column-header .se-column-type:hover > .sc-tooltip {
  display: block;
}

.sc-column-header.sm-issue::after,
.sc-sheet-cell.sm-issue::after {
  content: "";
  width: 0;
	height: 0;
	border-top: 7px solid transparent;
	border-left: 7px solid transparent;
  position: absolute;
  top: 0px;
  right: 0px;
}

.sc-column-header.sm-issue.sm-error::after,
.sc-sheet-cell.sm-issue.sm-error::after {
  border-top: 7px solid var(--sheet-error-color);
}

.sc-column-header.sm-issue.sm-warning::after,
.sc-sheet-cell.sm-issue.sm-warning::after {
  border-top: 7px solid var(--sheet-warning-color);
}

.sc-sheet-cell.sm-issue.sm-passed::after {
  border-top: 7px solid var(--sheet-passed-color);;
}

.sc-formula-editor {
  background: #fff;
  z-index: 200;
  border: 2px solid #2684FC;
  cursor: text;
  font-family: Monaco;
  padding: 2px 5px;
}

.sc-sheet .se-context-menu {
  position: absolute;
  background: var(--dark-bg-color);
  border-radius: 3px;
  padding: 2px 5px;
}

.sc-table-page.sm-loading {
  background: #ccc;
}

.sc-sheet .se-selection-overlay > .se-selection-rows {
  background: none;
}

.sc-sheet-cell .se-function-cell .sc-cell-value.sm-response-value {
  color: #b8b8b8;
}

.sc-sheet-cell .se-function-cell .sc-equation {
  font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
}

.sc-sheet-cell .sc-null-value {
  color: #cacaca;
  text-align: center;
  font-size: 12px;
}

.sc-sheet-cell .se-error {
  color: #FF0300;
  text-align: center;
  font-size: 12px;
}

.sc-sheet-editor .se-context-pane {
  flex: 0 2 300px;
  overflow: auto;
  height: 100%;
  position: relative;
  overflow: hidden;
  background: #F3F3F3;
  border-left: 1px solid #e1e4e8;
}

/* HACK: this is a rather hacky solution */
.sc-sheet-editor .se-context-pane > .se-context-pane-content {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  overflow: auto;
}

